[package]
name = "img2color"
version = "0.1.0"
edition = "2021"

[build]
target = "x86_64-unknown-linux-musl"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = { version = "1", features = ["raw_value"] }
# Documentation: https://docs.rs/vercel_runtime/latest/vercel_runtime
vercel_runtime = { version = "1.0.2" }
image = "0.24.6"
palette = "0.7.2"
reqwest = "0.11.1"
md5 = "0.7.0"
redis = "0.23.2"
dotenv = "0.15.0"

# You can specify a library for shared logic here (optional)
# [lib]
# path = "src-rs/lib.rs"

# Each handler has to be specified as [[bin]]
[[bin]]
name = "img2color"
path = "api/img2color.rs"

# Note that you need to provide unique names for each binary:
# [[bin]]
# name = "user-id"
# path = "api/user/[id].rs"
#
# [[bin]]
# name = "group-id"
# path = "api/group/[id].rs"
